[package]
name = "ReactiveDB"
version = "0.1.0"
authors = ["aep000 <alexparson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

byteorder = "1.3.4"
serde = {version="1.0.117", features = ["derive"] }
serde_cbor = "0.11.1"
serde_json = "1.0"
rand = "0.7.3"
serde_yaml = "0.8"
regex = "1"