[package]
name = "reactive_db"
version = "0.1.0"
authors = ["aep000 <alexparson1@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

byteorder = "1.3.4"
serde = {version="1.0.117", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
serde_yaml = "0.8"
uuid = { version = "0.8", features = ["serde", "v4"] }
reactivedb_rust_client = {path = "../reactivedb_rust_client"}
bzip2 = "0.3.3"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
rust_decimal = "1.8.1"
hyper = { version = "0.14", features = ["full"] }