[package]
name = "reactivedb_rust_client"
version = "0.1.0"
authors = ["aep000 <alexparson1@gmail.com>"]
edition = "2018"

[[bin]]
name = "benchmark"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

byteorder = "1.3.4"
serde = {version="1.0.117", features = ["derive"] }
serde_json = "1.0"
rand = "0.7.3"
